// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col gap-2"
>
  <p>
    Please select your age:
  </p>
  <label
    className="sc-bvdFzt eQGBHZ"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-dXycDr kLERNZ"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-jFAcUc ldZTnH"
    >
      <div
        className="sc-kBWXA-d iagXCt"
      />
    </span>
    <span
      className="sc-dbbhXq lorTGM"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-bvdFzt eQGBHZ"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-dXycDr kLERNZ"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-jFAcUc ldZTnH"
    >
      <div
        className="sc-kBWXA-d iagXCt"
      />
    </span>
    <span
      className="sc-dbbhXq lorTGM"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-bvdFzt eQGBHZ"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-dXycDr kLERNZ"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-jFAcUc ldZTnH"
    >
      <div
        className="sc-kBWXA-d iagXCt"
      />
    </span>
    <span
      className="sc-dbbhXq lorTGM"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-bvdFzt eQGBHZ"
>
  <input
    checked={true}
    className="sc-dXycDr kLERNZ"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-jFAcUc ldZTnH"
  >
    <div
      className="sc-kBWXA-d iagXCt"
    />
  </span>
  <span
    className="sc-dbbhXq lorTGM"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-bvdFzt eQGBHZ"
>
  <input
    className="sc-dXycDr kLERNZ"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-jFAcUc ldZTnH"
  >
    <div
      className="sc-kBWXA-d iagXCt"
    />
  </span>
  <span
    className="sc-dbbhXq lorTGM"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <label
    className="sc-bvdFzt eQGBHZ"
    htmlFor="button1"
  >
    <input
      className="sc-dXycDr kLERNZ"
      id="button1"
      name="button"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-jFAcUc ldZTnH"
    >
      <div
        className="sc-kBWXA-d iagXCt"
      />
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col gap-2"
  >
    <p>
      Please select your age:
    </p>
    <label
      className="sc-bvdFzt eQGBHZ"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-dXycDr kLERNZ"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-jFAcUc ldZTnH"
      >
        <div
          className="sc-kBWXA-d iagXCt"
        />
      </span>
      <span
        className="sc-dbbhXq lorTGM"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-bvdFzt eQGBHZ"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-dXycDr kLERNZ"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-jFAcUc ldZTnH"
      >
        <div
          className="sc-kBWXA-d iagXCt"
        />
      </span>
      <span
        className="sc-dbbhXq lorTGM"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-bvdFzt eQGBHZ"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-dXycDr kLERNZ"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-jFAcUc ldZTnH"
      >
        <div
          className="sc-kBWXA-d iagXCt"
        />
      </span>
      <span
        className="sc-dbbhXq lorTGM"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
